2009-10-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* VERSION: New.

	* src/gsad_log_conf.cmake_in: New.

	* src/CMakeLists.txt: New.

	* src/html/src/img/rpm.png, src/html/src/img/exe.png,
	src/html/src/img/key.png, src/html/src/img/deb.png: New.

	* gsad.c: New.

2009-10-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/img/new.png: New.

2009-10-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/help/configure_targets.htm4,
	src/html/src/help/new_task.htm4: New.

2009-09-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/img/start.png, src/html/src/img/refresh.png,
	src/html/src/img/start_inactive.png, src/html/src/img/delete.png,
	src/html/src/img/delete_inactive.png, src/html/src/img/details.png,
	src/html/src/img/stop.png, src/html/src/img/stop_inactive.png,
	src/html/src/img/help.png: New.

2009-09-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/help/, src/html/src/login/, src/html/src/img/,
	src/html/src/favicon.gif: New.

2009-09-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/: New.

2009-09-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: New.

	* src/html/: New.

2009-09-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* INSTALL: New.

	* README: New.

2009-09-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* COPYING: New. The GNU GPLv2.

	* src/: New.

2009-09-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Starting package "gsa" (Greenbone Security Assistant)