@@ -68,12 +68,15 @@ endif (OPENVAS_LIB_INSTALL_DIR)
 ## Libraries
 
 add_library (gsad-omp gsad-omp.c)
-set_target_properties (omp PROPERTIES COMPILE_FLAGS "${HEADER_TEMP} ${TASKS_CFLAG} ${GLIB_CFLAGS} ${LIBXML_CFLAGS}")
+set_target_properties (gsad-omp PROPERTIES COMPILE_FLAGS "${HEADER_TEMP} ${TASKS_CFLAG} ${GLIB_CFLAGS} ${LIBXML_CFLAGS}")
+
+add_library (gsad-oap gsad-oap.c)
+set_target_properties (gsad-oap PROPERTIES COMPILE_FLAGS "${HEADER_TEMP} ${TASKS_CFLAG} ${GLIB_CFLAGS} ${LIBXML_CFLAGS}")
 
 ## Program
 
 add_executable (gsad gsad.c)
-target_link_libraries (gsad gsad-omp)
+target_link_libraries (gsad gsad-omp gsad-oap)
 
 set_target_properties (gsad PROPERTIES LINKER_LANGUAGE C)
 
