@@ -1,0 +1,44 @@
+/* Greenbone Security Assistant
+ * $Id$
+ * Description: Headers/structs used generally in GSA
+ *
+ * Authors:
+ * Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+ * Matthew Mundell <matthew.mundell@intevation.de>
+ *
+ * Copyright:
+ * Copyright (C) 2009 Greenbone Networks GmbH
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License version 2,
+ * or, at your option, any later version as published by the Free
+ * Software Foundation
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+ */
+
+/**
+ * @file gsad.h
+ * @brief Headers/structs used generally in GSA
+ */
+
+#ifndef GSAD_BASE_H
+#define GSAD_BASE_H
+
+/**
+ *  @brief Structure that combines username and password
+ */
+typedef struct
+{
+  char *username;
+  char *password;
+} credentials_t;
+
+#endif
