@@ -1,3 +1,13 @@
+2009-10-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* src/gsad-oap.h: New.
+
+	* src/gsad-base.h: New.
+
+	* src/tracef.h: New.
+
+	* src/CMakeLists.txt: Handle modules gsad-omp and gsad-oap.
+
 2009-10-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* VERSION: New.
